<resources>
    <string name="app_name">PopularMoviesStage1App</string>
    <string name="movie_title_placeholder">{movie_title}</string>
    <string name="movie_poster_for_grid">Movie Poster for grid</string>
    <string name="movie_poster_imageview">Movie Poster ImageView</string>
    <string name="movie_title">{Movie_Title}</string>
    <string name="movie_rating">{Movie Rating}</string>
    <string name="movie_description">{Movie Description}</string>
    <string name="release_date">{Release Date}</string>
    <string name="release_label">Release</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_top_rated">Sort By Top Rated</string>
    <string name="ratings_icon">Ratings Icon</string>
    <string name="no_internet_text">No Internet Found.\nCheck your connection or try again</string>
    <string name="retry">Retry</string>
</resources>
