<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:hint="@string/movie_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/movie_poster_iv"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_below="@id/movie_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/movie_poster_imageview"
        android:src="@android:drawable/btn_radio" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_margin="16dp"
        android:layout_toEndOf="@id/movie_poster_iv"
        android:hint="@string/release_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/release_date"
        android:layout_margin="16dp"
        android:layout_toEndOf="@id/movie_poster_iv"
        android:hint="@string/movie_rating"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_poster_iv"
        android:layout_margin="16dp"
        android:hint="@string/movie_description"
        android:textSize="20sp" />
</RelativeLayout>